admin/src/components/routes/PipelineWrapper/Pipeline.css
/* ... */
@media (max-width: 1200px) {
	.pipeline__header {
		grid-template-columns: 300px auto 300px;
		height: 100px;
	}

	.pipeline__header-buttons-save {
		gap: 5px;
	}

	.pipeline__header-buttons-save sl-button::part(base) {
		min-height: unset !important;
		min-width: 200px;
	}

	.fullscreen-transformation {
		top: 100px !important;
	}
}

.pipeline__body {
	max-width: 1500px;
	margin: 50px auto;
	padding: 0 40px;
}

.pipeline .section {
	margin-bottom: 70px;
}

.pipeline .section--annotated {
	justify-content: center;
}

.pipeline .section:last-of-type {
	margin-bottom: 0;
}

.pipeline .section ::part(form-control-label) {
	font-weight: 400;
}

.pipeline__filters--disabled {
	opacity: 0.7;
}

.pipeline__filters--disabled * {
	opacity: 1;
}

.pipeline__filters-filter {
	display: flex;
}

.pipeline__filters-logical {
	min-width: 100px;
	margin-right: 9px;
}

.pipeline__filters-logical sl-button {
	width: 50px;
}

.pipeline__filters-logical--text {
	color: var(--text-light);
	font-size: 14px;
	position: relative;
	top: 4px;
	text-align: center;
}

.pipeline__filters-logical sl-button[variant='default']::part(base) {
	color: var(--sl-color-neutral-400);
	background-color: var(--bg-primary);
}

.pipeline__filters-condition {
	display: flex;
	flex-flow: row wrap;
	gap: 10px;
	margin-bottom: 20px;
	align-items: baseline;
	align-items: stretch;
}

.pipeline__filters-condition .combobox-input__error {
	width: max-content;
	margin-top: 1px;
}

.pipeline__filters-condition--is-one-of {
	flex-flow: row nowrap;
	gap: 10px;
}

.pipeline__filters-value-input {
	width: 150px;
}

.pipeline__filters-operator sl-option::part(base),
.pipeline__filters-value-input sl-option::part(base) {
	font-size: 13px;
}

.pipeline__filters-value-and {
	color: var(--text-light);
	font-size: 14px;
	position: relative;
	top: 4px;
}

.pipeline__filters-value-remove {
	margin-right: 0;
	background-color: var(--sl-color-neutral-50);
	border-left: 1px solid var(--sl-color-neutral-200);
}

.pipeline__filters-value-remove sl-icon {
	position: relative;
	top: 1px;
}

.pipeline__filters-value-remove::part(base) {
	background-color: transparent !important;
	border: 0;
	border-radius: 5px !important;
}

.pipeline__filters-value-control--removable .pipeline__filters-value-input {
	width: 180px;
}

.pipeline__filters-value-control--removable .pipeline__filters-value-input::part(combobox) {
	height: 30px !important;
}

.pipeline__filters-value-control--removable .pipeline__filters-value-input::part(suffix) {
	margin-left: 0;
	position: relative;
	left: 26px;
}

.pipeline__filters-value-control--removable .pipeline__filters-value-input::part(expand-icon) {
	margin-left: 0;
	position: relative;
	left: -25px;
}

.pipeline__filters-condition + .pipeline__filters-add-condition {
	margin-bottom: -12px;
}

.pipeline__filters-add-condition::part(base) {
	padding-left: 0;
}

.pipeline__filters-add-condition::part(label) {
	padding-left: 8px;
}

.pipeline__filters-add-condition sl-icon {
	font-size: 15px;
	height: 18px;
}

.pipeline__filters-remove-condition::part(base) {
	border: 0 !important;
	padding: 0 !important;
	background-color: transparent !important;
}

.pipeline__filters-remove-condition::part(label) {
	display: none;
}

.pipeline__filters-remove-condition sl-icon {
	font-size: 20px;
	width: 25px;
	transition: color 0.3s;
}

.pipeline__filters-remove-condition:hover sl-icon {
	color: var(--sl-color-danger-600);
}

.pipeline__filters-property-and-operator {
	display: flex;
	flex-flow: row nowrap;
	gap: 10px;
	min-width: max-content;
}

.pipeline__filters-is-one-of-values {
	display: flex;
	flex-flow: row wrap;
	gap: 10px;
	max-width: 630px;
}

.pipeline__table {
	display: flex;
	align-items: center;
	gap: 30px;
}

.pipeline__table .popover {
	margin-left: -15px;
}

.pipeline__table-key-property {
	display: flex;
	align-items: center;
	gap: 30px;
}

.pipeline__table-key-property .popover {
	margin-left: -15px;
}

.pipeline__table-key-section--disabled {
	opacity: 0.7;
}

.pipeline__table-key-section--disabled * {
	opacity: 1;
}

.pipeline__transformation-identity-column {
	margin-bottom: 30px;
	width: 350px;
}

.pipeline__transformation-identity-columns :last-child {
	margin-bottom: 0;
}

.pipeline__transformation-updated-at-column {
	display: flex;
	align-items: start;
	gap: 15px;
}

.pipeline__transformation-updated-at {
	width: 350px;
}

.pipeline__transformation-updated-at-format-property {
	display: flex;
	align-items: start;
	gap: 15px;
}

.pipeline__transformation-updated-at-custom-format {
	position: relative;
	top: 29px;
}

.pipeline__transformation-updated-at-format sl-select {
	width: 100%;
}

.pipeline__transformation-identity-columns-label {
	font-size: 14px;
}

.pipeline__transformation-identity-columns .pipeline__transformation-incremental {
	margin-top: 30px;
}

.pipeline__transformation--disabled {
	opacity: 0.7;
}

.pipeline__transformation--disabled * {
	opacity: 1;
}

.pipeline__transformation-section .section__description > p {
	margin-bottom: 10px;
}

.pipeline__transformation-section .section__description > p:last-child {
	margin-bottom: 0;
}

.pipeline__transformation-mappings {
	display: grid;
	grid-template-columns: calc(50% - 35px) 30px calc(50% - 35px);
	gap: 20px;
	align-items: start;
}

.fullscreen-transformation .pipeline__transformation-mappings {
	grid-template-columns: minmax(200px, 600px) 30px 1fr;
}

.pipeline__transformation-mapping:last-child {
	margin-bottom: 0;
}

.pipeline__transformation-mapping-arrow {
	display: flex;
	justify-content: center;
	align-items: center;
	position: relative;
	top: 6px;
}

.pipeline__transformation-input-property::part(base) {
	font-family: var(--monospace-fonts) !important;
}

.pipeline__transformation-property-icon {
	display: flex;
	justify-content: center;
	align-items: center;
}

.pipeline__filters .combobox {
	max-height: max-content;
}
/* ... */

